# cancer-prediction-jz596

./: .gitignore  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
cancer_prediction/: cancer_model.py  streamlit_app.py
cancer_prediction/cli/: app.py
docs/: index.md
docs/cancer-prediction/: streamlit_app.md
tests/: test_CancerModel.py
